--- a/webpage/public/style/styleWpisy.css
+++ b/webpage/public/style/styleWpisy.css
@@ -3,16 +3,25 @@ body{
     background: rgb(57,58,64);
     background: linear-gradient(90deg, rgba(57,58,64,1) 0%, rgba(132,135,173,1) 46%, rgba(54,54,54,1) 100%); 
 }
-
 #formularzDiv{
     background-color: #CDCDCD;
     width: 300px;
-    height: 1000px;
+    height: 600px;
     padding: 50px;
     margin: 20px;
     border: 8px solid #B6B6B6;
     position:fixed;
-    left: 40%
+    right: 5%;
+    top: 5%;
+}
+table{
+    position:relative;
+    left: 5%;
+    margin-top: 30px;
+}
+table, th, tr, td{
+    border: 1px solid black;
+    background-color: #DBC5C8;
 }
 
 #welcomeP{
