--- a/webpage/public/style/styles.css
+++ b/webpage/public/style/styles.css
@@ -1,4 +1,8 @@
+html{
+    overflow-y: scroll;
+}
 body{
+    overflow-y: scroll;
     margin: 0;
     background: rgb(57,58,64);
     background: linear-gradient(90deg, rgba(57,58,64,1) 0%, rgba(132,135,173,1) 46%, rgba(54,54,54,1) 100%); 
@@ -11,7 +15,7 @@ body{
     padding: 50px;
     margin: 20px;
     border: 8px solid #B6B6B6;
-    position:fixed;
+    position:absolute;
     left: 40%
 }
 
